--- a/src/pages/servicing-orders/servicing-order/components/services-table/ServicesTable.scss
+++ b/src/pages/servicing-orders/servicing-order/components/services-table/ServicesTable.scss
@@ -62,16 +62,27 @@
         width: 100%;
     }
     &__item {
+        &-err {
+            font-size: 1.3rem;
+            color: red;
+        }
+        &-err-desc {
+            font-size: 1.2rem;
+            @include addSpacing('margin-left', 10);
+        }
         width: 100%;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: left;
     }
     &__footer {
         width: 100%;
         display: flex;
         flex-direction: row;
-        justify-content: flex-end;
+        justify-content: space-between;
+        p {
+            color: gray;
+        }
     }
 }
 
