--- a/src/pages/title-metadata/TitleMetadataView.scss
+++ b/src/pages/title-metadata/TitleMetadataView.scss
@@ -1,2 +1,5 @@
-@import '../../styles/atlaskit/mixins';
-@import '../../styles/atlaskit/colors';
+.nexus-c-title-metadata {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
