PORT-3239 adding sagas to get title data

--- a/src/pages/title-metadata/components/title-metadata-details/TitleDetails.scss
+++ b/src/pages/title-metadata/components/title-metadata-details/TitleDetails.scss
@@ -2,5 +2,6 @@
 
 .nexus-c-title-details {
     width: 100%;
+    height: 100%; //TODO: remove height rule
     background-color: map-get($neutrals, N0);
 }
