--- a/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
+++ b/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
@@ -20,6 +20,10 @@
     z-index: 1;
 }
 
+.nexus-c-dynamic-form__tab-container--title {
+    top: 180px;
+}
+
 .nexus-c-dynamic-form__tab-content {
     @include padding(32, 0, 0, 0);
 }
