--- a/src/ui/elements/nexus-person-ro/NexusPersonRO.scss
+++ b/src/ui/elements/nexus-person-ro/NexusPersonRO.scss
@@ -10,6 +10,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        @include margin(0, 2, 0, 0);
     }
 }
 
