--- a/src/ui/elements/nexus-person/NexusPerson.scss
+++ b/src/ui/elements/nexus-person/NexusPerson.scss
@@ -17,6 +17,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        @include margin(0, 2, 0, 0);
     }
 }
 
