--- a/src/pages/title-metadata/components/title-metadata-table/TitleMetadataTable.scss
+++ b/src/pages/title-metadata/components/title-metadata-table/TitleMetadataTable.scss
@@ -13,3 +13,13 @@
         margin: 0;
     }
 }
+
+.nexus-c-title-metadata-table__repository {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.nexus-c-title-metadata-table__repository-icon {
+    cursor: pointer;
+}
