PORT-3241 removing unused components and adjust validation message

--- a/src/ui/elements/nexus-persons-list/NexusPersonsList.scss
+++ b/src/ui/elements/nexus-persons-list/NexusPersonsList.scss
@@ -22,6 +22,14 @@
     @include margin(0, 0, 3, 0);
 }
 
+.nexus-c-persons-list__add--invalid {
+    border: 2px solid map-get($reds, R400);
+}
+
+.nexus-c-persons-list__add--error {
+    color: map-get($reds, R400);
+}
+
 .cancel-button {
     margin-left: 24px;
 }
