PORT-3239 resolving comments

--- a/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
+++ b/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
@@ -24,6 +24,10 @@
     top: 175px;
 }
 
+.nexus-c-dynamic-form__tab-container--shrinked-title {
+    top: 82px;
+}
+
 .nexus-c-dynamic-form__tab-content {
     @include padding(32, 0, 0, 0);
 }
