PORT-3241 refactoring NexusPersonsList and creating new modal component

--- a/src/ui/elements/nexus-persons-list/NexusPersonsList.scss
+++ b/src/ui/elements/nexus-persons-list/NexusPersonsList.scss
@@ -30,6 +30,6 @@
     color: map-get($reds, R400);
 }
 
-.cancel-button {
-    margin-left: 24px;
+.nexus-c-nexus-persons-list__error-modal-title {
+    color: map-get($reds, R400);
 }
