PORT-3347: Add z-index in filter

--- a/src/pages/servicing-orders/ServicingOrdersView.scss
+++ b/src/pages/servicing-orders/ServicingOrdersView.scss
@@ -19,5 +19,6 @@
     &__customer-filter {
         @include margin(0, 1);
         @include addSpacing('width', 50);
+        z-index: 2;
     }
 }
