--- a/src/pages/avails/right-details/components/RightDetailsHeader.scss
+++ b/src/pages/avails/right-details/components/RightDetailsHeader.scss
@@ -3,9 +3,10 @@
 
 .nexus-c-right-details-header {
     width: 100%;
-    position: fixed;
+    position: sticky;
+    position: -webkit-sticky;
     top: 0;
-    @include padding(6, 0);
+    @include padding(6, 0, 0, 0);
     transition: padding linear 0.5s;
     background-color: #f2f2f2; //TODO: This is not atlaskit color
     z-index: 1;
@@ -21,6 +22,7 @@
 .nexus-c-right-details-header__bottom {
     width: 80%;
     @include margin(3, auto, 0, auto);
+    @include padding(0, 0, 3, 0);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -32,6 +34,7 @@
 .nexus-c-right-details-header__shrinked {
     width: 80%;
     @include margin(auto);
+    @include padding(0, 0, 3, 0);
     display: none;
     align-items: center;
     > p {
@@ -50,5 +53,12 @@
 }
 
 .nexus-c-right-details-header--adjust-padding {
-    @include padding(3, 0);
+    @include padding(3, 0, 0, 0);
+}
+
+.nexus-c-right-details-header__tabs {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: #fff;
 }
