PORT-3612-css-fix: title details css fix

--- a/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
+++ b/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
@@ -72,13 +72,16 @@
         right: 24px;
         z-index: 1;
         &--title {
-            top: 24px;
+            right: 31%;
         }
     }
     &__submit-button {
         right: 100px;
         &--title {
-            right: calc(1.2% + 80px);
+            right: 36%;
+        }
+        &--shrinked-title {
+            top: 82px;
         }
     }
 
