--- a/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
+++ b/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
@@ -72,13 +72,13 @@
         right: 24px;
         z-index: 1;
         &--title {
-            right: 31%;
+            right: 31.5%;
         }
     }
     &__submit-button {
         right: 100px;
         &--title {
-            right: 36%;
+            right: calc(31.5% + 80px);
         }
         &--shrinked-title {
             top: 82px;
