--- a/src/pages/avails/right-details/components/RightDetailsHeader.scss
+++ b/src/pages/avails/right-details/components/RightDetailsHeader.scss
@@ -60,5 +60,5 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: #fff;
+    background-color: map-get($neutrals, N0);
 }
