--- a/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
+++ b/src/ui/elements/nexus-dynamic-form/NexusDynamicForm.scss
@@ -29,7 +29,7 @@
 }
 
 .nexus-c-dynamic-form__tab-content {
-    @include padding(32, 0, 0, 0);
+    @include padding(3, 0, 0, 0);
 }
 
 .nexus-c-dynamic-form__tab-content--title {
@@ -103,4 +103,8 @@
 
 .nexus-c-field__value-section {
     width: 100%;
+}
+
+.nexus-c-dynamic-form__section-start {
+    scroll-margin: 80px;
 }
