--- a/src/styles/legacy/WeAre138.scss
+++ b/src/styles/legacy/WeAre138.scss
@@ -54,7 +54,7 @@ a img {
 .Nlogo {
     width: 138px;
     height: 30px;
-    background: url('../../assets/img/NEXUS-logo.png') no-repeat center;
+    background: url('~@vubiquity-nexus/portal-assets/img/NEXUS-logo.png') no-repeat center;
     display: block;
     margin: 0;
     opacity: 1;
