PORT-3590 adding date validation, and fixing table overlay

--- a/src/pages/sync-log/components/sync-log-table/SyncLogTable.scss
+++ b/src/pages/sync-log/components/sync-log-table/SyncLogTable.scss
@@ -1,3 +1,4 @@
+@import '../../../../styles/atlaskit/colors';
 @import '../../../../styles/config';
 
 $border: 1px solid rgba(map-get($colors, nexus-title-color), 0.7);
@@ -64,6 +65,10 @@ $border: 1px solid rgba(map-get($colors, nexus-title-color), 0.7);
 }
 
 .nexus-c-sync-log-table__date-field {
-    width: 150px;
+    width: 220px;
     margin: 0 5px;
+    &--error {
+        color: map-get($reds, R400);
+        font-size: 12px;
+    }
 }
