PORT-3617 code refactoring

--- a/src/pages/avails/pre-plan-actions/components/BulkSet/BulkSet.scss
+++ b/src/pages/avails/pre-plan-actions/components/BulkSet/BulkSet.scss
@@ -8,3 +8,9 @@
         color: map-get($colors, nexus-light-grey);
     }
 }
+
+.bulk-set-territories__select-container
+    > .bulk-set-territories__select__menu
+    > .bulk-set-territories__select__menu-list {
+    max-height: 180px;
+}
