--- a/src/ui/elements/nexus-dynamic-form/components/NexusField/components/Licensors/Licensors.scss
+++ b/src/ui/elements/nexus-dynamic-form/components/NexusField/components/Licensors/Licensors.scss
@@ -1,5 +1,5 @@
-@import '../../../../../../../styles/atlaskit/colors';
-@import '../../../../../../../styles/atlaskit/mixins';
+@import '~@vubiquity-nexus/portal-styles/scss/atlaskit/mixins';
+@import '~@vubiquity-nexus/portal-styles/scss/atlaskit/colors';
 
 .nexus-c-licensors {
     width: 100%;
