PORT-3245 adjusting selects menu height in modals

--- a/src/ui/elements/nexus-dynamic-form/components/NexusField/components/MsvIds/MsvIds.scss
+++ b/src/ui/elements/nexus-dynamic-form/components/NexusField/components/MsvIds/MsvIds.scss
@@ -16,3 +16,13 @@
         color: map-get($reds, R400);
     }
 }
+
+.nexus-c-modal__select-container > .nexus-c-modal__select__menu > .nexus-c-modal__select__menu-list {
+    max-height: 120px;
+}
+
+.nexus-c-modal__select-container-bottom
+    > .nexus-c-modal__select-bottom__menu
+    > .nexus-c-modal__select-bottom__menu-list {
+    max-height: 60px;
+}
