PORT-3632 adding new prop in schema.json to handle selects menu height

--- a/src/ui/elements/nexus-dynamic-form/components/NexusArray.scss
+++ b/src/ui/elements/nexus-dynamic-form/components/NexusArray.scss
@@ -100,6 +100,7 @@
         }
     }
     .nexus-c-array__modal-buttons {
+        @include margin(4, 0, 0, 0);
         text-align: right;
         .nexus-c-array__submit-button {
             margin-right: 6px;
