PORT-3632 resolving comments

--- a/src/ui/elements/nexus-dynamic-form/components/NexusArray.scss
+++ b/src/ui/elements/nexus-dynamic-form/components/NexusArray.scss
@@ -98,6 +98,9 @@
         > div {
             margin-top: 0;
         }
+        .nexus-c-nexus-select-container > .nexus-c-nexus-select__menu > .nexus-c-nexus-select__menu-list {
+            max-height: 120px;
+        }
     }
     .nexus-c-array__modal-buttons {
         @include margin(4, 0, 0, 0);
