--- a/src/ui/elements/nexus-select/NexusSelect.scss
+++ b/src/ui/elements/nexus-select/NexusSelect.scss
@@ -2,10 +2,8 @@
     max-height: 200px;
 }
 
-.nexus-c-nexus-select-container--lastInModal > .nexus-c-nexus-select__menu > .nexus-c-nexus-select__menu-list {
+.nexus-c-nexus-select-container--lastInModal
+    > .nexus-c-nexus-select-last__menu
+    > .nexus-c-nexus-select-last__menu-list {
     max-height: 60px;
-}
-
-.nexus-c-nexus-select-container--modal > .nexus-c-nexus-select__menu > .nexus-c-nexus-select__menu-list {
-    max-height: 120px;
 }
