SSVU-192: Add extranla packages for common utils/styles

--- a/src/pages/asset-management/ChooseArtwork.scss
+++ b/src/pages/asset-management/ChooseArtwork.scss
@@ -1,4 +1,4 @@
-@import '../../styles/atlaskit/colors';
+@import '~@vubiquity-nexus/portal-styles/scss/atlaskit/colors';
 
 .choose-artwork {
     background: map-get($neutrals, N0);
