--- a/src/pages/asset-management/artwork-actions/ArtworkActions.scss
+++ b/src/pages/asset-management/artwork-actions/ArtworkActions.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/atlaskit/colors';
+@import '~@vubiquity-nexus/portal-styles/scss/atlaskit/colors';
 
 .artwork-actions {
     display: flex;
