--- a/src/pages/asset-management/artwork-item/AtrworkItem.scss
+++ b/src/pages/asset-management/artwork-item/AtrworkItem.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/atlaskit/colors';
+@import '~@vubiquity-nexus/portal-styles/scss/atlaskit/colors';
 
 .artwork-item {
     margin: 0 16px 16px 0;
