--- a/src/pages/avails/right-details/components/RightDetailsHeader.scss
+++ b/src/pages/avails/right-details/components/RightDetailsHeader.scss
@@ -70,3 +70,7 @@
     width: 80%;
     border-bottom: 2px solid map-get($neutrals, N40);
 }
+
+.nexus-c-right-details-match {
+    @include padding(0, 45, 2, 45);
+}
