PORT-3246 adding regenerateAutoDecoratedMetadata button and info message for master EMET

--- a/src/ui/elements/nexus-dynamic-form/components/NexusArrayWithTabs.scss
+++ b/src/ui/elements/nexus-dynamic-form/components/NexusArrayWithTabs.scss
@@ -32,6 +32,10 @@
     }
 }
 
+.nexus-c-nexus-array-with-tabs__master-emet {
+    @include padding(0, 4.35);
+}
+
 .nexus-c-nexus-array-with-tabs__field {
     width: 100%;
 
