--- a/packages/ui/src/elements/nexus-dynamic-form/NexusDynamicForm.scss
+++ b/packages/ui/src/elements/nexus-dynamic-form/NexusDynamicForm.scss
@@ -74,6 +74,14 @@
     right: 100px;
 }
 
+.nexus-c-dynamic-form__validation-msg {
+    position: absolute;
+    top: 24px;
+    z-index: 1;
+    font-size: 1.3rem;
+    right: 245px;
+}
+
 .nexus-c-dynamic-form__cancel-button--title,
 .nexus-c-dynamic-form__submit-button--title,
 .nexus-c-dynamic-form__edit-button--title {
