--- a/src/pages/title-metadata/components/title-metadata-header/TitleMetadataHeader.scss
+++ b/src/pages/title-metadata/components/title-metadata-header/TitleMetadataHeader.scss
@@ -23,5 +23,8 @@
 }
 
 .nexus-c-title-metadata-header__buttons-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     margin-left: auto;
 }
