--- a/packages/ui/src/elements/nexus-status-tag/StatusTag.scss
+++ b/packages/ui/src/elements/nexus-status-tag/StatusTag.scss
@@ -45,7 +45,8 @@
         background: map-get($secondary-colors, yellow);
     }
 
-    &--fo-complete {
+    &--fo-complete,
+    &--fo-accepted {
         background: map-get($secondary-colors, green);
     }
 
