--- a/src/pages/servicing-orders/servicing-order/components/header-section/HeaderSection.scss
+++ b/src/pages/servicing-orders/servicing-order/components/header-section/HeaderSection.scss
@@ -29,7 +29,7 @@
         flex-direction: column;
         overflow-y: auto;
         overflow-x: hidden;
-        max-height: 100%;
+        height: 60vh;
 
         & > :first-child {
             border-top: 1px solid map-get($light-neutral-colors, light-neutral-2);
