--- a/packages/ui/src/elements/nexus-status-tag/StatusTag.scss
+++ b/packages/ui/src/elements/nexus-status-tag/StatusTag.scss
@@ -3,8 +3,9 @@
 
 .nexus-status-tag {
     border-radius: 3px;
-    width: 75px;
+    min-width: 75px;
     height: 16px;
+    padding: 2px;
     display: inline-flex;
     justify-content: center;
     align-items: center;
