--- a/packages/ui/src/elements/nexus-dynamic-form/components/NexusField/components/MsvIds/MsvIds.scss
+++ b/packages/ui/src/elements/nexus-dynamic-form/components/NexusField/components/MsvIds/MsvIds.scss
@@ -24,5 +24,9 @@
 .nexus-c-modal__select-container-bottom
     > .nexus-c-modal__select-bottom__menu
     > .nexus-c-modal__select-bottom__menu-list {
-    max-height: 60px;
+    max-height: 120px;
+}
+
+.nexus-c-modal__form-footer {
+    @include margin(0, 0, 16, 0);
 }
