PORT-3737: date filter fix

--- a/packages/ui/src/elements/nexus-date-and-time-elements/nexus-date-picker/NexusDatePicker.scss
+++ b/packages/ui/src/elements/nexus-date-and-time-elements/nexus-date-picker/NexusDatePicker.scss
@@ -1,5 +1,9 @@
 @import '~@vubiquity-nexus/portal-styles/scss/atlaskit/colors';
 
+.nexus_c_date_picker_filter {
+    display: flex;
+    flex-direction: column;
+}
 .nexus-c-date-picker__read-view-container {
     display: flex;
     align-items: center;
