--- a/src/pages/servicing-orders/servicing-order/components/fulfillment-order/FulfillmentOrder.scss
+++ b/src/pages/servicing-orders/servicing-order/components/fulfillment-order/FulfillmentOrder.scss
@@ -1,3 +1,5 @@
+@import '~@vubiquity-nexus/portal-styles/scss/atlaskit/mixins';
+
 .fulfillment-order {
     &__section {
         width: 95%;
@@ -42,4 +44,35 @@
 
 .right-align {
     text-align: right;
+}
+
+.error-list {
+    width: 100%;
+    @include padding(5, 2, 3, 2);
+    &__header {
+        width: 100%;
+    }
+    &__item {
+        &-err {
+            font-size: 1.3rem;
+            color: red;
+        }
+        &-err-desc {
+            font-size: 1.2rem;
+            @include addSpacing('margin-left', 5);
+        }
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: left;
+    }
+    &__footer {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        p {
+            color: gray;
+        }
+    }
 }
