PORT-3931: fix movida/vz title selection

--- a/src/pages/metadata/legacy-title-reconciliation/components/CandidatesList.scss
+++ b/src/pages/metadata/legacy-title-reconciliation/components/CandidatesList.scss
@@ -41,3 +41,12 @@
         display: contents;
     }
 }
+
+[col-id='matchButton'] .ag-react-container,
+[col-id='duplicateButton'] .ag-react-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+}
