PORT-3920: Add new release report button

--- a/src/pages/avails/avails-table-toolbar/AvailsTableToolbar.scss
+++ b/src/pages/avails/avails-table-toolbar/AvailsTableToolbar.scss
@@ -21,7 +21,6 @@
 }
 
 .nexus-c-table-toolbar__button-container {
-    display: flex;
-    flex-grow: 4;
-    justify-content: flex-end;
+    display: inline-flex;
+    padding: 10px;
 }
