--- a/src/pages/avails/rights-repository/RightsRepository.scss
+++ b/src/pages/avails/rights-repository/RightsRepository.scss
@@ -21,7 +21,7 @@
     align-items: center;
 
     .nexus-c-rights-repository & {
-        min-width: 100px;
+        margin: 0;
         font-size: 14px;
     }
 }
