PORT-3920: Add new component

--- a/src/pages/avails/avails-table-toolbar/AvailsTableToolbar.scss
+++ b/src/pages/avails/avails-table-toolbar/AvailsTableToolbar.scss
@@ -21,6 +21,8 @@
 }
 
 .nexus-c-table-toolbar__button-container {
-    display: inline-flex;
+    display: flex;
+    flex-grow: 4;
+    justify-content: flex-end;
     padding: 10px;
 }
