--- a/src/pages/avails/avails-table-release-report/AvailsTableReleaseReport.scss
+++ b/src/pages/avails/avails-table-release-report/AvailsTableReleaseReport.scss
@@ -1,3 +1,10 @@
 .nexus-c-right-repository-release-report {
     margin-left: 10px;
+    .nexus-c-right-repository-release-report-content {
+        width: 187px;
+        padding: 20px;
+    }
+    .nexus-c-right-repository-release-report__month-dropdown {
+        margin: 15px 0;
+    }
 }
