--- a/src/pages/avails/avails-table-release-report/AvailsTableReleaseReport.scss
+++ b/src/pages/avails/avails-table-release-report/AvailsTableReleaseReport.scss
@@ -7,4 +7,10 @@
     .nexus-c-right-repository-release-report__month-dropdown {
         margin: 15px 0;
     }
+    .nexus-c-right-repository-release-report__month-dropdown
+        > .nexus-c-nexus-select__menu
+        > .nexus-c-nexus-select__menu-list {
+        max-height: 300px;
+        height: 300px;
+    }
 }
