--- a/src/pages/servicing-orders/servicing-order/components/juicebox-section/JuiceBoxSection.scss
+++ b/src/pages/servicing-orders/servicing-order/components/juicebox-section/JuiceBoxSection.scss
@@ -1,7 +1,10 @@
 .nexus-jb-lang-input {
     width: 300px;
-}
 
+}
+.nexus-jb-lang-input_textfield {
+    height: auto;
+}
 .nexus-jb-lang-label {
     margin-top: 2rem;
 }
