--- a/src/pages/legacy/containers/metadata/dashboard/components/coretitlemetadata/CoreMetadata.scss
+++ b/src/pages/legacy/containers/metadata/dashboard/components/coretitlemetadata/CoreMetadata.scss
@@ -12,3 +12,9 @@
     margin-top: 15px !important;
     border: 1px solid #000 !important;
 }
+
+.nexus-subselect {
+    top: -17px;
+    left: 7px;
+    color: #A5ADBA;
+}
