PORT-3986: Add new fields

--- a/src/pages/servicing-orders/servicing-order/components/filter-section/ServiceOrderFilter.scss
+++ b/src/pages/servicing-orders/servicing-order/components/filter-section/ServiceOrderFilter.scss
@@ -23,4 +23,8 @@
             @include addSpacing('margin-right', 2);
         }
     }
+
+    .nexus_c_date_picker_filter {
+        width: 50%;
+    }
 }
