PORT-3987: create initial ui layout

--- a/src/pages/servicing-orders/servicing-order/components/fulfillment-order/FulfillmentOrder.scss
+++ b/src/pages/servicing-orders/servicing-order/components/fulfillment-order/FulfillmentOrder.scss
@@ -76,3 +76,10 @@
         }
     }
 }
+
+.nexus-fo-date-readonly {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
