--- a/src/pages/servicing-orders/servicing-order/components/servicing-order-item/ServicingOrderItem.scss
+++ b/src/pages/servicing-orders/servicing-order/components/servicing-order-item/ServicingOrderItem.scss
@@ -6,6 +6,14 @@
     @include padding(3);
     border-bottom: 1px solid map-get($light-neutral-colors, light-neutral-2);
 
+    &__title-row {
+        width: 100%;
+    }
+
+    &__icons {
+        justify-content: flex-end;
+    }
+
     &__row {
         display: flex;
         justify-content: space-between;
@@ -15,6 +23,9 @@
     &__row-group {
         display: flex;
         align-items: center;
+        .nexus-c-servicing-order-item__badge {
+            margin-left: 4px;
+        }
     }
 
     &__folder-icon {
@@ -28,6 +39,12 @@
 
     &__title {
         @include margin(0);
+        white-space: nowrap;
+        overflow: hidden;
+        align-items: center;
+        text-overflow: ellipsis;
+        display: inline-block;
+        width: 100%;
     }
 
     &__external-id {
