PORT-3988: Add margin

--- a/src/pages/servicing-orders/servicing-order/components/servicing-order-item/ServicingOrderItem.scss
+++ b/src/pages/servicing-orders/servicing-order/components/servicing-order-item/ServicingOrderItem.scss
@@ -42,6 +42,7 @@
     }
 
     &__title {
+        @include margin(0);
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
