--- a/packages/ui/src/elements/nexus-grid/elements/custom-date-filter/CustomDateFilter.scss
+++ b/packages/ui/src/elements/nexus-grid/elements/custom-date-filter/CustomDateFilter.scss
@@ -1,16 +1,23 @@
+@import '~@vubiquity-nexus/portal-styles/scss/atlaskit/mixins';
+
 .nexus-c-custom-date-range-filter {
-    padding: 10px 5px 10px 10px;
+    width: 240px;
+    @include padding(2.5, 0, 2.5, 1.25);
     .nexus-c-date-time-window-picker {
         display: flex;
         flex-direction: column;
         align-items: normal;
         .nexus-c-date-time-window-picker__start-date {
-            margin-bottom: 10px;
+            @include margin(0, 0, 2.5, 0);
+        }
+
+        .nexus-c-date-time-window-picker__label {
+            @include margin(0, 1.25, 0, 0);
         }
     }
 }
 
 .nexus-c-date-filter-btn {
-    margin-left: 75%;
-    margin-top: 5px;
+    @include margin(2.5, 1.25, 0, 0);
+    text-align: right;
 }
