--- a/src/pages/avails/rights-repository/components/ingest/Ingest.scss
+++ b/src/pages/avails/rights-repository/components/ingest/Ingest.scss
@@ -41,6 +41,7 @@
         flex-direction: column;
         justify-content: space-between;
         flex: 1;
+        width: calc(100% - 350px);
 
         .ingest-status {
             @include addSpacing(padding-left, 7.5);
