PORT-4032 adding ellipsis style to cell

--- a/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTable.scss
+++ b/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTable.scss
@@ -8,3 +8,9 @@
         min-height: 200px;
     }
 }
+
+.nexus-c-rights-matching-titles-table__cast-crew > div > div {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
