--- a/packages/ui/src/elements/nexus-dynamic-form/components/NexusArray.scss
+++ b/packages/ui/src/elements/nexus-dynamic-form/components/NexusArray.scss
@@ -94,7 +94,7 @@
 }
 
 .nexus-c-array__modal-fields {
-    > div:last-child {
+    > div > div:last-child {
         .nexus-c-field__value {
             .nexus-c-nexus-select-container > .nexus-c-nexus-select__menu > .nexus-c-nexus-select__menu-list {
                 max-height: 60px;
