PORT-4069 adding tooltip to castCrew column

--- a/src/pages/avails/rights-repository/RightsRepository.scss
+++ b/src/pages/avails/rights-repository/RightsRepository.scss
@@ -29,3 +29,9 @@
 .nexus-c-rights-repository__row {
     background-color: map-get($neutrals, N30) !important;
 }
+
+.nexus-c-rights-repo-table__cast-crew > div > div {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
