PORT-3970: add emailSubject filter in ingest panel

--- a/src/pages/avails/ingest-panel/components/ingest-filters/IngestFilters.scss
+++ b/src/pages/avails/ingest-panel/components/ingest-filters/IngestFilters.scss
@@ -29,7 +29,8 @@
         }
     }
 
-    &__row1 {
+    &__row1,
+    &__row3 {
         display: flex;
         justify-content: space-between;
         margin-bottom: 16px;
