--- a/src/pages/avails/ingest-panel/components/ingest-filters/IngestFilters.scss
+++ b/src/pages/avails/ingest-panel/components/ingest-filters/IngestFilters.scss
@@ -27,6 +27,13 @@
             color: #42526e;
             padding: 0 10px;
         }
+        &--filename {
+            margin-top: 16px;
+            flex-grow: 1;
+            & > input {
+                width: 100%;
+            }
+        }
     }
 
     &__row1,
@@ -34,6 +41,7 @@
         display: flex;
         justify-content: space-between;
         margin-bottom: 16px;
+        flex-wrap: wrap;
     }
 
     .nexus-c-date-time-window-picker {
