--- a/src/pages/avails/ingest-panel/IngestPanel.scss
+++ b/src/pages/avails/ingest-panel/IngestPanel.scss
@@ -16,4 +16,9 @@
         overflow-x: hidden;
         max-height: 100%;
     }
+
+    &__btns {
+        display: flex;
+        justify-content: space-between;
+    }
 }
