--- a/src/pages/avails/ingest-panel/components/reload-config/ReloadConfigBtn.scss
+++ b/src/pages/avails/ingest-panel/components/reload-config/ReloadConfigBtn.scss
@@ -1,15 +1,16 @@
 @import '~@vubiquity-nexus/portal-styles/scss/atlaskit/mixins';
+@import '~@vubiquity-nexus/portal-styles/scss/atlaskit/colors';
 
 .ingest-reload-btn {
     @include padding(2.5, 5);
 }
 
 .status-success {
-    color: green;
+  color: map-get($greens, G400);
 }
 
 .status-failed {
-    color: red;
+    color: map-get($reds, R400);
 }
 
 .rotate {
