PORT-3819: Add custom filter

--- a/packages/ui/src/elements/nexus-grid/elements/value-formatter/createValueFormatter.scss
+++ b/packages/ui/src/elements/nexus-grid/elements/value-formatter/createValueFormatter.scss
@@ -2,4 +2,9 @@
 
 .nexus-c-withdrawn-icon {
     fill: map-get($mid-neutral-colors, mid-neutral-7);
+    width: 20px;
+}
+
+.nexus-c-repository-icon span {
+    width: 25px;
 }
