PORT-3819: add yellow icon

--- a/packages/ui/src/elements/nexus-grid/elements/value-formatter/createValueFormatter.scss
+++ b/packages/ui/src/elements/nexus-grid/elements/value-formatter/createValueFormatter.scss
@@ -3,6 +3,9 @@
 .nexus-c-withdrawn-icon {
     fill: map-get($mid-neutral-colors, mid-neutral-7);
     width: 20px;
+    &--is-active {
+        fill: map-get($yellows, Y500);
+    }
 }
 
 .nexus-c-repository-icon span {
