--- a/packages/ui/src/elements/nexus-grid/elements/custom-complex-filter/CustomComplexFilter.scss
+++ b/packages/ui/src/elements/nexus-grid/elements/custom-complex-filter/CustomComplexFilter.scss
@@ -1,3 +1,8 @@
 .nexus-c-custom-complex-filter {
     padding: 10px 5px 10px 10px;
+    display: flex;
+    flex-direction: column;
+    &--clear {
+        align-self: flex-end;
+    }
 }
