--- a/src/pages/dop-tasks/components/dop-tasks-table/components/assign-modal/AssignModal.scss
+++ b/src/pages/dop-tasks/components/dop-tasks-table/components/assign-modal/AssignModal.scss
@@ -1,8 +1,9 @@
 .dop-tasks-assign-tasks {
     display: flex;
-    min-height: 100px;
+    min-height: 120px;
     width: 100%;
     align-items: flex-start;
+    overflow-y: hidden;
     label {
         margin-right: 10px;
         padding-top: 10px;
